--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="11">
-<title>stochastic flux</title>
+<title>beejal.io</title>
 <style>
 *{margin:0;padding:0}
 html,body{width:100vw;height:100vh;overflow:hidden}
